--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "icons": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
