--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "@mantine/carousel": "^7.16.1",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "firebase": "^11.2.0",
     "icons": "^1.0.0",
+    "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
@@ -14,6 +17,8 @@
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "react-toaster": "^0.0.3",
+    "react-toastify": "^11.0.3",
     "slick-carousel": "^1.8.1",
     "toastify": "^2.0.1"
   },
